feat: [Button]onClick

--- a/packages/demo/components/Button.mdx
+++ b/packages/demo/components/Button.mdx
@@ -12,3 +12,11 @@ import { Button } from 'pivot-design';
 >
   button
 </Button>
+<div className="title">自定义点击事件</div>
+<Button
+  onClick={(e) => {
+    console.log(e);
+  }}
+>
+  button
+</Button>
