feat: css variable & highlight line dynamically

--- a/packages/demo/src/components/Button/Button.mdx
+++ b/packages/demo/src/components/Button/Button.mdx
@@ -3,14 +3,14 @@ import demoObj from './demo/index';
 # Button
 
 <div className="title">普通样式</div>
-<CodeBlock code={demoObj.basic} line={'6'}>
+<CodeBlock code={demoObj.basic} line={'5-7'}>
   <Button type="primary">按钮</Button>
   <Button>按钮</Button>
   <Button type="text">按钮</Button>
 </CodeBlock>
 
 <div className="title">按钮禁用</div>
-<CodeBlock code={demoObj.disabled} line={'6'}>
+<CodeBlock code={demoObj.disabled} line={'5-11'}>
   <Button type="primary" disabled>
     按钮
   </Button>
