--- a/packages/demo/src/components/DraggableList/index.mdx
+++ b/packages/demo/src/components/DraggableList/index.mdx
@@ -2,7 +2,7 @@
 
 可拖拽列表
 
-<CodeBlock code={''} line={''}>
+<CodeBlock line={''}>
   <DraggableList>
     <div className="demo-list-item">1</div>
     <div className="demo-list-item">2</div>
