--- a/packages/demo/src/components/Card/Card.mdx
+++ b/packages/demo/src/components/Card/Card.mdx
@@ -8,4 +8,8 @@ import demoObj from './demo/index';
     <p>xxx</p>
     <p>hello world</p>
   </Card>
+  <Card title="多余文本" time="19:20 2020-09-15">
+  <p> 我好想买Airpods但是没有钱，梁老师可不可以资助我</p>
+  <p>我好想买Airpods但是没有钱，梁老师可不可以资助我一点钱钱呢啊？不多不多的，球球了！我好想买Airpods但是没有钱，梁老师可不可以资助我一点钱钱呢啊？不多不多的，球球了！我好想买Airpods但是没有钱，梁老师可</p>
+  </Card>
 </CodeBlock>
