--- a/packages/demo/src/components/Card/index.mdx
+++ b/packages/demo/src/components/Card/index.mdx
@@ -1,29 +1,26 @@
-import Avatar from "./svg/avatar.tsx"
-import Agree from "./svg/agree.tsx"
-import Comment from "./svg/comment.tsx"
-import Store from "./svg/store.tsx"
+import Avatar from "./svg/avatar1.tsx"
+import Actions from "./svg/index.tsx"
+import More from "./svg/tab.tsx"
+import GridAvatar from "./svg/avatar2.tsx"
 
 # Card
 
 <div className="title">默认样式</div>
 <CodeBlock  line={'5-15'}>
-  <Card title={<div>测试</div>} time="19:20 2020-09-15" extra={<a href="#">More</a>} actions={<div><Agree/>16<Comment/>14<Store/>20
-</div>} >
+  <Card title={<div>测试</div>} time="19:20 2020-09-15" extra={<More/>} actions={<Actions></Actions>} >
 <div style={{height:"86px"}}>
   <p>  我好想买Airpods但是没有钱，梁老师可不可以资助我</p>
   <p>一点钱钱呢啊？不多不多的 </p>
  </div>
   </Card>
 
-  <Card title={<div>多余文本</div>} time="19:20 2020-09-15" extra={<a href="#">...</a>} avatar={<Avatar></Avatar>}  boradius={false}  actions={<div><Agree/>16<Comment/>14<Store/>20
-</div>}>
+  <Card title={<div>多余文本</div>} time="19:20 2020-09-15" extra={<More/>} avatar={<Avatar/>} actions={<Actions/>}>
   <p> 我好想买Airpods但是没有钱，梁老师可不可以资助我</p>
   <p>我好想买Airpods但是没有钱，梁老师可不可以资助我一点钱钱呢啊？不多不多的，球球了！我好想买Airpods但是没有钱，梁老师可不可以资助我一点钱钱呢啊？不多不多的，球球了！我好想买Airpods但是没有钱，梁老师可</p>
    <p>我好想买Airpods但是没有钱，梁老师可不可以资助我一点钱钱呢啊？不多不多的，球球了！我好想买Airpods但是没有钱，梁老师可不可以资助我一点钱钱呢啊？不多不多的，球球了！我好想买Airpods但是没有钱，梁老师可</p>
     <p>我好想买Airpods但是没有钱，梁老师可不可以资助我一点钱钱呢啊？不多不多的，球球了！我好想买Airpods但是没有钱，梁老师可不可以资助我一点钱钱呢啊？不多不多的，球球了！我好想买Airpods但是没有钱，梁老师可</p>
   </Card>
-  <Card title={<div>多余文本</div>} time="19:20 2020-09-15" extra={<a href="#">...</a>} boradius={false} style={{width:"600px",'--card-background-color': 'rgb(233, 233, 15)'}} actions={<div><Agree/>16<Comment/>14<Store/>20
-</div>}>
+  <Card title={<div>多余文本</div>} time="19:20 2020-09-15" extra={<a href="#">...</a>} boradius={false} style={{width:"600px",'--card-background-color': 'rgb(233, 233, 15)'}} actions={<Actions/>}>
   <p> 我好想买Airpods但是没有钱，梁老师可不可以资助我</p>
   <p>我好想买Airpods但是没有钱，梁老师可不可以资助我一点钱钱呢啊？不多不多的，球球了！我好想买Airpods但是没有钱，梁老师可不可以资助我一点钱钱呢啊？不多不多的，球球了！我好想买Airpods但是没有钱，梁老师可</p>
   </Card>
@@ -31,7 +28,7 @@ import Store from "./svg/store.tsx"
   </CodeBlock>
 <div className="title">栅格</div>
 <CodeBlock line={'5-11'}>
-<Card style={{'--card-background-color':' rgba(244, 247, 250,1)',}} Grid={true}>
+<Card avatar={<GridAvatar/>} title={<div style={{fontSize:"18px",fontWeight:"700",marginTop:"10px"}}>运动小天才</div>} style={{'--card-background-color':' rgba(244, 247, 250,1)',}} Grid={true}>
     <div>足球</div>
     <div>足球</div>
     <div>足球</div>
