--- a/packages/demo/src/components/Card/index.mdx
+++ b/packages/demo/src/components/Card/index.mdx
@@ -8,17 +8,19 @@ import GridAvatar from "./svg/avatar2.tsx"
 <div className="title">默认样式</div>
 <CodeBlock  line={'5-15'}>
   <Card title={<div>测试</div>} time="19:20 2020-09-15" extra={<More/>} actions={<Actions></Actions>} >
-<div style={{height:"86px"}}>
-  <p>  我好想买Airpods但是没有钱，梁老师可不可以资助我</p>
-  <p>一点钱钱呢啊？不多不多的 </p>
+<div >
+   <p>我好想买Airpods但是没有钱，梁老师可不可以资助我
+  一点钱钱呢啊？不多不多的 </p>
  </div>
   </Card>
 
   <Card title={<div>多余文本</div>} time="19:20 2020-09-15" extra={<More/>} avatar={<Avatar/>} actions={<Actions/>}>
-  <p> 我好想买Airpods但是没有钱，梁老师可不可以资助我</p>
-  <p>我好想买Airpods但是没有钱，梁老师可不可以资助我一点钱钱呢啊？不多不多的，球球了！我好想买Airpods但是没有钱，梁老师可不可以资助我一点钱钱呢啊？不多不多的，球球了！我好想买Airpods但是没有钱，梁老师可</p>
-   <p>我好想买Airpods但是没有钱，梁老师可不可以资助我一点钱钱呢啊？不多不多的，球球了！我好想买Airpods但是没有钱，梁老师可不可以资助我一点钱钱呢啊？不多不多的，球球了！我好想买Airpods但是没有钱，梁老师可</p>
-    <p>我好想买Airpods但是没有钱，梁老师可不可以资助我一点钱钱呢啊？不多不多的，球球了！我好想买Airpods但是没有钱，梁老师可不可以资助我一点钱钱呢啊？不多不多的，球球了！我好想买Airpods但是没有钱，梁老师可</p>
+  
+   我好想买Airpods但是没有钱，梁老师可不可以资助我
+  我好想买Airpods但是没有钱，梁老师可不可以资助我一点钱钱呢啊？不多不多的，球球了！我好想买Airpods但是没有钱，梁老师可不可以资助我一点钱钱呢啊？不多不多的，球球了！我好想买Airpods但是没有钱，梁老师可
+   我好想买Airpods但是没有钱，梁老师可不可以资助我一点钱钱呢啊？不多不多的，球球了！我好想买Airpods但是没有钱，梁老师可不可以资助我一点钱钱呢啊？不多不多的，球球了！我好想买Airpods但是没有钱，梁老师可
+    我好想买Airpods但是没有钱，梁老师可不可以资助我一点钱钱呢啊？不多不多的，球球了！我好想买Airpods但是没有钱，梁老师可不可以资助我一点钱钱呢啊？不多不多的，球球了！我好想买Airpods但是没有钱，梁老师可
+    
   </Card>
   <Card title={<div>多余文本</div>} time="19:20 2020-09-15" extra={<a href="#">...</a>} boradius={false} style={{width:"600px",'--card-background-color': 'rgb(233, 233, 15)'}} actions={<Actions/>}>
   <p> 我好想买Airpods但是没有钱，梁老师可不可以资助我</p>
