--- a/packages/demo/src/components/DraggableList/index.mdx
+++ b/packages/demo/src/components/DraggableList/index.mdx
@@ -2,14 +2,11 @@ import demoObj from './demo/index';
 
 # DraggableList
 
-可拖拽列表
+可拖拽模块
 
-<CodeBlock line={''} code={demoObj.basic}>
-  <DraggableList
-    onDragEnd={(oldIndex, newIndex) => props.reorderItems(oldIndex, newIndex)}
-  >
-    {props.items.map((item) => {
-      return <DraggableItem className="demo-list-item">{item}</DraggableItem>;
-    })}
-  </DraggableList>
+<CodeBlock line={''}>
+  <SortableContext>
+    <DraggableItem className="demo-list-item">{1}</DraggableItem>
+    <DraggableItem className="demo-list-item">{2}</DraggableItem>
+  </SortableContext>
 </CodeBlock>
