feat: sortable preset

--- a/packages/demo/src/components/DraggableList/index.mdx
+++ b/packages/demo/src/components/DraggableList/index.mdx
@@ -3,6 +3,7 @@ import demoObj from './demo/index';
 # DraggableList
 
 可拖拽模块
+``
 
 <CodeBlock line={''}>
   <SortableContext onDragEnd={props.onDragEnd}>
@@ -10,4 +11,10 @@ import demoObj from './demo/index';
       draggable
     </DraggableItem>
   </SortableContext>
+</CodeBlock>
+
+可拖拽列表
+
+<CodeBlock line={''}>
+  <Sortable itemClassName="demo-draggable-item"></Sortable>
 </CodeBlock>
