--- a/packages/demo/src/components/Draggable/index.mdx
+++ b/packages/demo/src/components/Draggable/index.mdx
@@ -1,8 +1,8 @@
 import demoObj from './demo/index';
 
-# DraggableList
+# Draggable 拖拽
 
-可拖拽模块
+## 基本示例
 
 <CodeBlock line={''} code={demoObj.basic}>
   <DndContext onDragEnd={props.onDragEnd}>
@@ -12,7 +12,7 @@ import demoObj from './demo/index';
   </DndContext>
 </CodeBlock>
 
-可拖拽列表
+## 可拖拽列表
 
 <CodeBlock line={''} code={demoObj.verticalSortable}>
   <Sortable itemClassName="demo-draggable-item"></Sortable>
