feat: collision detection in drop

--- a/packages/demo/src/components/Draggable/index.mdx
+++ b/packages/demo/src/components/Draggable/index.mdx
@@ -12,6 +12,15 @@ import demoObj from './demo/index';
   </DndContext>
 </CodeBlock>
 
+## 拖放示例
+
+<CodeBlock line={''} code={demoObj.basic}>
+  <DndContext>
+    <DraggableItem className="demo-draggable-item">draggable</DraggableItem>
+    <Droppable></Droppable>
+  </DndContext>
+</CodeBlock>
+
 ## 可拖拽列表
 
 <CodeBlock line={''} code={demoObj.verticalSortable}>
