--- a/packages/demo/src/components/Button/index.mdx
+++ b/packages/demo/src/components/Button/index.mdx
@@ -1,3 +1,4 @@
+
 # Button
 
 <div className="title">普通样式</div>
@@ -8,7 +9,7 @@
 </CodeBlock>
 
 <div className="title">按钮禁用</div>
-<CodeBlock line={'5-7'}>
+<CodeBlock line={'5-2'}>
   <Button type="primary" disabled>
     按钮
   </Button>
@@ -19,39 +20,40 @@
 </CodeBlock>
 
 <div className="title">按钮尺寸</div>
-<CodeBlock line={'5-13'}>
+<CodeBlock line={'5-1'}>
   <Button size="small">small</Button>
   <Button size="middle">middle</Button>
   <Button size="large">large</Button>
 </CodeBlock>
 
 <div className="title">自定义颜色</div>
-<Button
-  style={{
-    '--button-background-color': 'rgb(233, 233, 15)',
-  }}
->
-  button
-</Button>
-<Button 
-  type="primary"
-  style={{
-    '--button-background-color': '#3685f5',
-  }}
->
-  button
-</Button>
+<CodeBlock line={'5-9'}>
+  <Button
+    style={{
+      '--button-background-color': 'rgb(233, 233, 15)',
+    }}
+  >
+    button
+  </Button>
+  <Button 
+    type="primary"
+    style={{
+      '--button-background-color': '#3685f5',
+    }}
+  >
+    button
+  </Button>
+</CodeBlock>
 
 <div className="title">自定义点击事件</div>
-<CodeBlock line={'3-13'} code={click}>
+<CodeBlock line={'5-7'}>
   <ButtonOnClick/>
 </CodeBlock>
 
 
-<div className="title">加载中状态</div>
-<CodeBlock line={'5-11'}>
-  <Button>正常按钮</Button>
-  <Button loading={true}>加载中</Button>
+<div className="title">加载中和节流防抖</div>
+<CodeBlock line={'5-1009'}>
+  <ButtonLoading/>
 </CodeBlock>
 
 
