feat: sortable horizen

--- a/packages/demo/src/components/Button/index.mdx
+++ b/packages/demo/src/components/Button/index.mdx
@@ -1,6 +1,7 @@
 # Button
 
 <div className="title">普通样式</div>
+
 <CodeBlock line={'5-7'}>
   <Button type="primary">按钮</Button>
   <Button>按钮</Button>
@@ -8,7 +9,8 @@
 </CodeBlock>
 
 <div className="title">按钮禁用</div>
-<CodeBlock line={'5-11'}>
+
+<CodeBlock line={'5-7'}>
   <Button type="primary" disabled>
     按钮
   </Button>
@@ -21,7 +23,7 @@
 <div className="title">自定义颜色</div>
 <Button
   style={{
-    '--button-background-color': 'rgb(233, 233, 15)',
+    '--button-background-color': 'rgb(233, 233, 15)'
   }}
 >
   button
