--- a/packages/demo/src/components/Draggable/index.mdx
+++ b/packages/demo/src/components/Draggable/index.mdx
@@ -33,6 +33,14 @@ import demoObj from './demo/index';
 
 ## 可拖拽列表
 
-<CodeBlock line={''} code={demoObj.verticalSortable}>
-  <Sortable itemClassName="demo-draggable-item"></Sortable>
+### 垂直方向 Vertical
+
+<CodeBlock line={'1-3'} code={demoObj.verticalSortable}>
+  <Sortable direction="vertical" itemClassName="demo-draggable-item"></Sortable>
+</CodeBlock>
+
+### 水平方向 Horizen
+
+<CodeBlock line={'1-3'} code={demoObj.verticalSortable}>
+  <Sortable direction="horizen" itemClassName="demo-draggable-item demo-sortable-horizen"></Sortable>
 </CodeBlock>
