feat: change Button Name

--- a/packages/demo/src/components/Button/index.mdx
+++ b/packages/demo/src/components/Button/index.mdx
@@ -46,10 +46,10 @@
 
 <div className="title">自定义点击事件</div>
 <CodeBlock line={'5-7'}>
-  <ButtonOnClick />
+  <OnClick />
 </CodeBlock>
 
 <div className="title">加载中和节流防抖</div>
 <CodeBlock line={'5-1009'}>
-  <ButtonLoading />
+  <Loading />
 </CodeBlock>
