--- a/packages/demo/src/components/Skeleton/index.mdx
+++ b/packages/demo/src/components/Skeleton/index.mdx
@@ -2,5 +2,5 @@
 
 <div className="title">普通样式</div>
 <CodeBlock line={'5-7'}>
-<Skeleton></Skeleton>
+<Skeleton style={{width:"280px"}}></Skeleton>
 </CodeBlock>
