--- a/packages/demo/src/components/Draggable/index.mdx
+++ b/packages/demo/src/components/Draggable/index.mdx
@@ -44,3 +44,13 @@ import demoObj from './demo/index';
 <CodeBlock line={'1-3'} code={demoObj.verticalSortable}>
   <Sortable direction="horizen" itemClassName="demo-draggable-item demo-sortable-horizen"></Sortable>
 </CodeBlock>
+
+### 栅格布局
+
+<CodeBlock line={'1-3'} code={demoObj.verticalSortable}>
+  <Sortable
+    items={[1, 2, 3, 4, 5, 6, 7, 8, 9]}
+    direction="grid"
+    itemClassName="demo-draggable-item demo-sortable-grid"
+  ></Sortable>
+</CodeBlock>
