--- a/packages/demo/src/components/Card/index.mdx
+++ b/packages/demo/src/components/Card/index.mdx
@@ -107,7 +107,7 @@ import More from "./svg/tab.tsx"
 </CodeBlock>
 <div className="title">自定义收起和展开文字</div>
 <CodeBlock line={'5-7'}>
-<Card title={<div>多余文本</div>} time="19:20 2020-09-15" extra={<More/>} avatar={<img src="https://gw.alipayobjects.com/zos/rmsportal/JiqGstEfoWAOHiTxclqi.png" width="35" height="35"/>} actions={<Actions/>} style={{'--card-expandText':"展开",'--card-collapseText':'收'}}>
+<Card title={<div>多余文本</div>} time="19:20 2020-09-15" extra={<More/>} avatar={<img src="https://gw.alipayobjects.com/zos/rmsportal/JiqGstEfoWAOHiTxclqi.png" width="35" height="35"/>} actions={<Actions/>} style={{'--card-expandText':'60','--card-collapseText':'70'}}>
   
    我好想买Airpods但是没有钱，梁老师可不可以资助我
    我好想买Airpods但是没有钱，梁老师可不可以资助我一点钱钱呢
