--- a/packages/demo/src/components/Button/index.mdx
+++ b/packages/demo/src/components/Button/index.mdx
@@ -1,3 +1,5 @@
+import Props from './props.mdx';
+
 # Button
 
 <div className="title">普通样式</div>
@@ -53,3 +55,5 @@
 <CodeBlock line={'5-1009'}>
   <Loading />
 </CodeBlock>
+
+<Props />
