feat: generate props with table

--- a/packages/demo/src/components/Draggable/index.mdx
+++ b/packages/demo/src/components/Draggable/index.mdx
@@ -1,4 +1,5 @@
 import demoObj from './demo/index';
+import Props from './props.mdx';
 
 # Draggable 拖拽
 
@@ -17,3 +18,5 @@ import demoObj from './demo/index';
 <CodeBlock line={''} code={demoObj.verticalSortable}>
   <Sortable itemClassName="demo-draggable-item"></Sortable>
 </CodeBlock>
+
+<Props />
