feat: Icon finish

--- a/packages/demo/src/components/Icon/index.mdx
+++ b/packages/demo/src/components/Icon/index.mdx
@@ -1,6 +1,31 @@
-# Button
+# Icon
 
-<div className="title">普通样式</div>
+<div className="title">基本用法</div>
 <CodeBlock line={'5-7'}>
   <IconList/>
+</CodeBlock>
+
+<div className="title">主题样式</div>
+<CodeBlock line={'5-7'}>
+  <Theme/>
+</CodeBlock>
+
+<div className="title">定义颜色和透明度</div>
+<CodeBlock line={'5-7'}>
+  <Color/>
+</CodeBlock>
+
+<div className="title">尺寸</div>
+<CodeBlock line={'5-7'}>
+  <Size/>
+</CodeBlock>
+
+<div className="title">自定义样式与旋转</div>
+<CodeBlock line={'5-7'}>
+  <Style/>
+</CodeBlock>
+
+<div className="title">CDN引入</div>
+<CodeBlock line={'5-7'}>
+  <CDN/>
 </CodeBlock>
