--- a/packages/demo/src/components/Skeleton/index.mdx
+++ b/packages/demo/src/components/Skeleton/index.mdx
@@ -4,3 +4,9 @@
 <CodeBlock line={'5-7'}>
 <Skeleton style={{width:"280px"}}></Skeleton>
 </CodeBlock>
+<CodeBlock line={'5-7'}>
+<Skeleton style={{width:"280px"}} title={true}></Skeleton>
+</CodeBlock>
+<CodeBlock line={'5-7'}>
+<Skeleton style={{width:"280px"}} avatar={true}></Skeleton>
+</CodeBlock>
