--- a/packages/demo/src/components/Skeleton/index.mdx
+++ b/packages/demo/src/components/Skeleton/index.mdx
@@ -10,3 +10,6 @@
 <CodeBlock line={'5-7'}>
 <Skeleton style={{width:"280px"}} avatar={true}></Skeleton>
 </CodeBlock>
+<CodeBlock line={'5-7'}>
+<Skeleton style={{width:"280px",height:"90px"}} bulk={true}></Skeleton>
+</CodeBlock>
