--- a/packages/demo/src/components/Card/index.mdx
+++ b/packages/demo/src/components/Card/index.mdx
@@ -105,3 +105,8 @@ import More from "./svg/tab.tsx"
   我好想买Airpods但是没有钱，梁老师可</p>
   </Card>
 </CodeBlock>
+
+<div className="title">加载中</div>
+<CodeBlock line={'5-7'}>
+<Loading/>
+</CodeBlock>
