--- a/packages/demo/src/components/Skeleton/index.mdx
+++ b/packages/demo/src/components/Skeleton/index.mdx
@@ -4,12 +4,19 @@
 <CodeBlock line={'5-7'}>
 <Skeleton style={{width:"380px"}}></Skeleton>
 </CodeBlock>
+<div className="title">带标题</div>
 <CodeBlock line={'5-7'}>
 <Skeleton style={{width:"380px"}} title={true}></Skeleton>
 </CodeBlock>
+<div className="title">带头像</div>
 <CodeBlock line={'5-7'}>
 <Skeleton style={{width:"380px"}} avatar={true}></Skeleton>
 </CodeBlock>
+<div className="title">块状</div>
 <CodeBlock line={'5-7'}>
 <Skeleton style={{width:"380px",height:"90px"}} bulk={true}></Skeleton>
+</CodeBlock>
+<div className="title">静态</div>
+<CodeBlock line={'5-7'}>
+<Skeleton style={{width:"380px",'--skeleton-active':'false'}}></Skeleton>
 </CodeBlock>
