fix:variable name

--- a/packages/demo/src/components/Skeleton/index.mdx
+++ b/packages/demo/src/components/Skeleton/index.mdx
@@ -14,7 +14,7 @@
 </CodeBlock>
 <div className="title">块状</div>
 <CodeBlock line={'5-7'}>
-<Skeleton style={{width:"380px",height:"90px"}} bulk={true}></Skeleton>
+<Skeleton style={{width:"380px",height:"90px"}} brick={true}></Skeleton>
 </CodeBlock>
 <div className="title">静态</div>
 <CodeBlock line={'5-7'}>
