style: multiple container sortable vertically

--- a/packages/demo/src/components/Draggable/index.mdx
+++ b/packages/demo/src/components/Draggable/index.mdx
@@ -56,6 +56,6 @@
 
 ### 多容器拖拽（垂直）
 
-<CodeBlock line={''}>
+<CodeBlock line={''} style={{ flexWrap: 'nowrap' }}>
   <MultipleContainer />
 </CodeBlock>
