--- a/packages/demo/src/components/Draggable/index.mdx
+++ b/packages/demo/src/components/Draggable/index.mdx
@@ -12,25 +12,25 @@
 
 ## 基本示例
 
-<CodeBlock line={''}>
+<CodeBlock>
   <Basic />
 </CodeBlock>
 
 ## 自定义拖拽过程中的样式
 
-<CodeBlock line={''}>
+<CodeBlock>
   <WithDragOverlay />
 </CodeBlock>
 
 ## 设置可拖拽区域
 
-<CodeBlock line={''}>
+<CodeBlock>
   <WithHandler />
 </CodeBlock>
 
 ## 拖放案例
 
-<CodeBlock line={''}>
+<CodeBlock>
   <Droppable />
 </CodeBlock>
 
@@ -38,24 +38,24 @@
 
 ### 垂直方向拖拽
 
-<CodeBlock line={''}>
+<CodeBlock>
   <VerticalSortable />
 </CodeBlock>
 
 ### 水平方向拖拽
 
-<CodeBlock line={''}>
+<CodeBlock>
   <HorizenSortable />
 </CodeBlock>
 
 ### 网格拖拽
 
-<CodeBlock line={''}>
+<CodeBlock>
   <GridSortable />
 </CodeBlock>
 
 ### 多容器拖拽（垂直）
 
-<CodeBlock line={''} style={{ flexWrap: 'nowrap' }}>
+<CodeBlock style={{ flexWrap: 'nowrap' }}>
   <MultipleContainer />
 </CodeBlock>
