--- a/packages/demo/src/components/Input/index.mdx
+++ b/packages/demo/src/components/Input/index.mdx
@@ -14,3 +14,8 @@
 <CodeBlock line={'5-7'}>
   <Prepend/>
 </CodeBlock>
+
+<div className="title">密码框</div>
+<CodeBlock line={'5-7'}>
+  <Password/>
+</CodeBlock>
