feat:add dragge

--- a/packages/demo/src/components/Modal/index.mdx
+++ b/packages/demo/src/components/Modal/index.mdx
@@ -4,3 +4,15 @@
 <CodeBlock line={'5-7'}>
 <Common/>
 </CodeBlock>
+<div className="title">自定义底部样式</div>
+<CodeBlock line={'7-11'}>
+<FooterRow/>
+</CodeBlock>
+<div className="title">自定义位置</div>
+<CodeBlock line={'7-11'}>
+<Position/>
+</CodeBlock>
+<div className="title">可拖动</div>
+<CodeBlock line={'7-11'}>
+<Dragge/>
+</CodeBlock>
