style:close icon

--- a/packages/demo/src/components/Modal/index.mdx
+++ b/packages/demo/src/components/Modal/index.mdx
@@ -16,3 +16,7 @@
 <CodeBlock line={'7-11'}>
 <Dragge/>
 </CodeBlock>
+<div className="title">自定义蒙层</div>
+<CodeBlock line={'7-11'}>
+<Mask/>
+</CodeBlock>
