--- a/packages/demo/src/components/Draggable/index.mdx
+++ b/packages/demo/src/components/Draggable/index.mdx
@@ -1,56 +1,61 @@
-import demoObj from './demo/index';
-
 # Draggable 拖拽
+
+一个轻量级，高性能的用于 React 的可扩展拖放组件。
+
+目前，针对拖拽组件的开源解决方案多种多样。常见的基于 React 技术栈的拖拽组件有 `react-beautiful-dnd`、`react-sortable-hoc` 以及 `react-dnd` 等。这些组件在不断地迭代改进中，因此它们的使用可能会带来额外的学习成本和包的体积增大，这会让一些开发者望而却步。
+
+这里提供一个比较轻量级的 Draggable 组件。其具有以下特点：
+
+- 零依赖和模块化:库没有外部依赖。它是围绕内置的 React 状态管理和上下文构建的，这保持了库的精简。
+- 可拓展性：可供用户自定义事件模型等。
+- 灵活性：实现了各种各样的拖拽效果以及拖拽排序。
 
 ## 基本示例
 
-<CodeBlock line={''} code={demoObj.basic}>
-  <DndContext onDragEnd={props.onDragEnd}>
-    <DraggableItem className="demo-draggable-item" left={props.coordinates.x} top={props.coordinates.y}>
-      draggable
-    </DraggableItem>
-  </DndContext>
+<CodeBlock>
+  <Basic />
 </CodeBlock>
 
-## 设置拖动点
+## 自定义拖拽过程中的样式
 
-<CodeBlock line={''} code={demoObj.basic}>
-  <DndContext onDragEnd={props.onDragEnd}>
-    <DraggableItem className="demo-draggable-item" left={props.coordinates.x} top={props.coordinates.y} handle>
-      draggable
-    </DraggableItem>
-  </DndContext>
+<CodeBlock>
+  <WithDragOverlay />
 </CodeBlock>
 
-## 拖放示例
+## 设置可拖拽区域
 
-<CodeBlock line={''} code={demoObj.droppable}>
-  <DndContext onDragEnd={props.onDragEnd2}>
-    <div style={{ minWidth: '150px', display: 'flex' }}>{props.parent !== 'A' ? <DraggableBlock /> : null}</div>
-    <Droppable>{props.parent === 'A' ? <DraggableBlock /> : null}</Droppable>
-  </DndContext>
+<CodeBlock>
+  <WithHandler />
 </CodeBlock>
 
-## 可拖拽列表
+## 拖放案例
 
-### 垂直方向 Vertical
-
-<CodeBlock line={'1-3'} code={demoObj.verticalSortable}>
-  <Sortable direction="vertical" itemClassName="demo-draggable-item"></Sortable>
+<CodeBlock>
+  <Droppable />
 </CodeBlock>
 
-### 水平方向 Horizen
+## 🌟 拖拽排序组件
 
-<CodeBlock line={'1-3'} code={demoObj.verticalSortable}>
-  <Sortable direction="horizen" itemClassName="demo-draggable-item demo-sortable-horizen"></Sortable>
+### 垂直方向拖拽
+
+<CodeBlock>
+  <VerticalSortable />
 </CodeBlock>
 
-### 栅格布局
+### 水平方向拖拽
 
-<CodeBlock line={'1-3'} code={demoObj.verticalSortable}>
-  <Sortable
-    items={[1, 2, 3, 4, 5, 6, 7, 8, 9]}
-    direction="grid"
-    itemClassName="demo-draggable-item demo-sortable-grid"
-  ></Sortable>
+<CodeBlock>
+  <HorizenSortable />
+</CodeBlock>
+
+### 网格拖拽
+
+<CodeBlock>
+  <GridSortable />
+</CodeBlock>
+
+### 多容器拖拽（垂直）
+
+<CodeBlock style={{ flexWrap: 'nowrap' }}>
+  <MultipleContainer />
 </CodeBlock>
