--- a/packages/demo/src/components/Draggable/index.mdx
+++ b/packages/demo/src/components/Draggable/index.mdx
@@ -12,11 +12,15 @@
 
 ## 基本示例
 
+下面是一个最基础的拖拽实例，可以用鼠标任意拖拽实例中的元素。
+
 <CodeBlock>
   <Basic />
 </CodeBlock>
 
-## 自定义拖拽过程中的样式
+## 拖拽过程中的元素
+
+拖拽组件支持自定义渲染正在处于拖拽过程中的元素。
 
 <CodeBlock>
   <WithDragOverlay />
@@ -24,17 +28,23 @@
 
 ## 设置可拖拽区域
 
+支持设置可拖拽的区域。
+
 <CodeBlock>
   <WithHandler />
 </CodeBlock>
 
 ## 拖放案例
 
+支持拖拽并放置到指定区域
+
 <CodeBlock>
   <Droppable />
 </CodeBlock>
 
-## 🌟 拖拽排序组件
+## 🌟 拖拽排序
+
+拖拽排序（Drag-and-drop sorting）是一种广泛实用的交互设计手法。支持用户进行垂直、水平以及网格布局的拖拽排序。
 
 ### 垂直方向拖拽
 
@@ -55,6 +65,8 @@
 </CodeBlock>
 
 ### 多容器拖拽（垂直）
+
+支持多个容器之间进行拖拽排序的场景
 
 <CodeBlock style={{ flexWrap: 'nowrap' }}>
   <MultipleContainer />
