feat:add useModal

--- a/packages/demo/src/components/Modal/index.mdx
+++ b/packages/demo/src/components/Modal/index.mdx
@@ -20,3 +20,7 @@
 <CodeBlock line={'7-11'}>
 <Mask/>
 </CodeBlock>
+<div className="title">自定义蒙层</div>
+<CodeBlock line={'7-11'}>
+<UseModal/>
+</CodeBlock>
