fix:card line-height problem

--- a/packages/demo/src/components/Card/index.mdx
+++ b/packages/demo/src/components/Card/index.mdx
@@ -56,7 +56,7 @@ import More from './svg/tab.tsx';
     extra={<More />}
     avatar={<img src="https://gw.alipayobjects.com/zos/rmsportal/JiqGstEfoWAOHiTxclqi.png" width="35" height="35" />}
     actions={<Actions />}
-    style={{ '--card-minLength': '5' }}
+    style={{ '--card-minLength': 5 }}
   >
     我好想买Airpods但是没有钱，梁老师可不可以资助我 我好想买Airpods但是没有钱，梁老师可不可以资助我一点钱钱呢
     啊？不多不多的，球球了！我好想买Airpods但 是没有钱，梁老师可不可以资助我一点钱钱呢啊？不多不多的，
@@ -72,7 +72,7 @@ import More from './svg/tab.tsx';
     extra={<More />}
     avatar={<img src="https://gw.alipayobjects.com/zos/rmsportal/JiqGstEfoWAOHiTxclqi.png" width="35" height="35" />}
     actions={<Actions />}
-    style={{ '--card-maxLength': '7' }}
+    style={{ '--card-maxLength': 7 }}
   >
     我好想买Airpods但是没有钱，梁老师可不可以资助我 我好想买Airpods但是没有钱，梁老师可不可以资助我一点钱钱呢
     啊？不多不多的，球球了！我好想买Airpods但 是没有钱，梁老师可不可以资助我一点钱钱呢啊？不多不多的，
