--- a/packages/demo/src/components/Card/index.mdx
+++ b/packages/demo/src/components/Card/index.mdx
@@ -2,8 +2,9 @@ import Actions from './svg/index.tsx';
 import More from './svg/tab.tsx';
 
 # Card
-
-<div className="title">默认样式</div>
+通用卡片容器
+## 默认样式
+一个简单的卡片用法。
 <CodeBlock line={'5-7'}>
   <Card title={<div>测试</div>} time="19:20 2020-09-15" extra={<More />} actions={<Actions></Actions>}>
     <div>
@@ -11,7 +12,8 @@ import More from './svg/tab.tsx';
     </div>
   </Card>
 </CodeBlock>
-<div className="title">带头像</div>
+## 带头像
+通过avatar属性来添加头像。
 <CodeBlock line={'5-7'}>
   <Card
     title={<div>多余文本</div>}
@@ -29,8 +31,8 @@ import More from './svg/tab.tsx';
     梁老师可不可以资助我一点钱钱呢啊？ 不多不多的， 球球了！我好想买Airpods但是没有钱，梁老师可
   </Card>
 </CodeBlock>
-
-<div className="title">栅格</div>
+## 栅格
+利用Grid属性，实现栅格布局。
 <CodeBlock line={'5-7'}>
   <Card
     avatar={<img src="https://gw.alipayobjects.com/zos/rmsportal/JiqGstEfoWAOHiTxclqi.png" width="35" height="35" />}
@@ -48,7 +50,8 @@ import More from './svg/tab.tsx';
     <div>足球</div>
   </Card>
 </CodeBlock>
-<div className="title">收起与展开长度</div>
+## 收起与展开长度
+通过css变量实现展示内容的长度。
 <CodeBlock line={'5-7'}>
   <Card
     title={<div>多余文本</div>}
@@ -83,7 +86,8 @@ import More from './svg/tab.tsx';
     梁老师可不可以资助我一点钱钱呢啊？不多不多的，球球了！ 我好想买Airpods但是没有钱，梁老师可
   </Card>
 </CodeBlock>
-<div className="title">自定义背景色和宽度</div>
+## 自定义背景颜色和宽度
+自定义更改卡片的样式。
 <CodeBlock line={'5-7'}>
   <Card
     title={<div>多余文本</div>}
@@ -101,7 +105,8 @@ import More from './svg/tab.tsx';
   </Card>
 </CodeBlock>
 
-<div className="title">加载中</div>
+## 加载中
+数据读入前会有文本块样式。
 <CodeBlock line={'5-7'}>
   <Loading />
 </CodeBlock>
