feat: props table gen

--- a/packages/demo/src/components/Input/index.mdx
+++ b/packages/demo/src/components/Input/index.mdx
@@ -1,21 +1,25 @@
+import Props from './props.mdx';
+
 # Input
 
 <div className="title">基本用法</div>
 <CodeBlock line={'5-7'}>
-  <Base/>
+  <Base />
 </CodeBlock>
 
 <div className="title">输入框尺寸</div>
 <CodeBlock line={'5-7'}>
-  <Size/>
+  <Size />
 </CodeBlock>
 
 <div className="title">固定前缀和后缀</div>
 <CodeBlock line={'5-7'}>
-  <Prepend/>
+  <Prepend />
 </CodeBlock>
 
 <div className="title">密码框</div>
 <CodeBlock line={'5-7'}>
-  <Password/>
+  <Password />
 </CodeBlock>
+
+<Props />
