--- a/packages/demo/src/components/Card/index.mdx
+++ b/packages/demo/src/components/Card/index.mdx
@@ -1,5 +1,6 @@
 import Actions from './svg/index.tsx';
 import More from './svg/tab.tsx';
+import Props from './props.mdx';
 
 # Card
 
@@ -105,3 +106,5 @@ import More from './svg/tab.tsx';
 <CodeBlock line={'5-7'}>
   <Loading />
 </CodeBlock>
+
+<Props />
