Feat props generator (#34)
* fix: codeblock expand

* chore: init script

* feat: generate props

* feat: generate props with table

* chore: use  asset/source instead raw-loader

* feat: props table gen

* feat: props table style

---------

Co-authored-by: 1360151219 <zhanjingxi@ps.ink>

--- a/packages/demo/src/components/Draggable/index.mdx
+++ b/packages/demo/src/components/Draggable/index.mdx
@@ -1,3 +1,5 @@
+import Props from './props.mdx';
+
 # Draggable 拖拽
 
 一个轻量级，高性能的用于 React 的可扩展拖放组件。
@@ -71,3 +73,5 @@
 <CodeBlock style={{ flexWrap: 'nowrap' }}>
   <MultipleContainer />
 </CodeBlock>
+
+<Props />
