--- a/packages/demo/src/components/Button/index.mdx
+++ b/packages/demo/src/components/Button/index.mdx
@@ -29,13 +29,15 @@
 
 <div className="title">自定义颜色</div>
 
-<Button
-  style={{
-    '--button-background-color': 'rgb(233, 233, 15)'
-  }}
->
-  button
-</Button>
+<CodeBlock line={'5-7'}>
+  <Button
+    style={{
+      '--button-background-color': 'rgb(233, 233, 15)',
+    }}
+  >
+    button
+  </Button>
+</CodeBlock>
 
 <div className="title">自定义点击事件</div>
 <CodeBlock line={'5-7'}>
