feat: 文档目录生成&渲染

--- a/packages/demo/src/components/Button/index.mdx
+++ b/packages/demo/src/components/Button/index.mdx
@@ -2,7 +2,7 @@ import Props from './props.mdx';
 
 # Button
 
-<div className="title">普通样式</div>
+## 普通样式
 
 <CodeBlock line={'5-7'}>
   <Button type="primary">按钮</Button>
@@ -10,7 +10,7 @@ import Props from './props.mdx';
   <Button type="text">按钮</Button>
 </CodeBlock>
 
-<div className="title">按钮禁用</div>
+## 可禁用样式
 
 <CodeBlock line={'5-7'}>
   <Button type="primary" disabled>
@@ -22,14 +22,15 @@ import Props from './props.mdx';
   </Button>
 </CodeBlock>
 
-<div className="title">按钮尺寸</div>
+## 按钮尺寸大小
+
 <CodeBlock line={'5-7'}>
   <Button size="small">small</Button>
   <Button size="middle">middle</Button>
   <Button size="large">large</Button>
 </CodeBlock>
 
-<div className="title">自定义颜色</div>
+## 自定义 css 颜色（token）
 
 <Button
   style={{
@@ -39,12 +40,14 @@ import Props from './props.mdx';
   button
 </Button>
 
-<div className="title">自定义点击事件</div>
+## 点击事件
+
 <CodeBlock line={'5-7'}>
   <OnClick />
 </CodeBlock>
 
-<div className="title">加载中和节流防抖</div>
+## loading加载中和节流、防抖
+
 <CodeBlock line={'5-1009'}>
   <Loading />
 </CodeBlock>
