--- a/packages/demo/src/components/Draggable/index.mdx
+++ b/packages/demo/src/components/Draggable/index.mdx
@@ -44,7 +44,7 @@ import Props from './props.mdx';
   <Droppable />
 </CodeBlock>
 
-## 🌟 拖拽排序
+## 拖拽排序
 
 拖拽排序（Drag-and-drop sorting）是一种广泛实用的交互设计手法。支持用户进行垂直、水平以及网格布局的拖拽排序。
 
