--- a/packages/demo/src/components/Input/index.mdx
+++ b/packages/demo/src/components/Input/index.mdx
@@ -2,22 +2,22 @@ import Props from './props.mdx';
 
 # Input
 
-<div className="title">基本用法</div>
+## 基本用法
 <CodeBlock line={'5-7'}>
   <Base />
 </CodeBlock>
 
-<div className="title">输入框尺寸</div>
+## 输入框尺寸
 <CodeBlock line={'5-7'}>
   <Size />
 </CodeBlock>
 
-<div className="title">固定前缀和后缀</div>
+## 固定前缀和后缀
 <CodeBlock line={'5-7'}>
   <Prepend />
 </CodeBlock>
 
-<div className="title">密码框</div>
+## 密码框
 <CodeBlock line={'5-7'}>
   <Password />
 </CodeBlock>
