--- a/packages/demo/src/components/Skeleton/index.mdx
+++ b/packages/demo/src/components/Skeleton/index.mdx
@@ -2,23 +2,23 @@ import Props from './props.mdx';
 
 # skeleton
 
-<div className="title">普通样式</div>
+## 普通样式
 <CodeBlock line={'5-7'}>
   <Skeleton style={{ width: '380px' }}></Skeleton>
 </CodeBlock>
-<div className="title">带标题</div>
+## 带标题
 <CodeBlock line={'5-7'}>
   <Skeleton style={{ width: '380px' }} title={true}></Skeleton>
 </CodeBlock>
-<div className="title">带头像</div>
+## 带头像
 <CodeBlock line={'5-7'}>
   <Skeleton style={{ width: '380px' }} avatar={true}></Skeleton>
 </CodeBlock>
-<div className="title">块状</div>
+## 块状
 <CodeBlock line={'5-7'}>
   <Skeleton style={{ width: '380px', height: '90px' }} brick={true}></Skeleton>
 </CodeBlock>
-<div className="title">静态</div>
+## 静态
 <CodeBlock line={'5-7'}>
   <Skeleton style={{ width: '380px', '--skeleton-active': 'false' }}></Skeleton>
 </CodeBlock>
