--- a/packages/demo/src/components/Icon/index.mdx
+++ b/packages/demo/src/components/Icon/index.mdx
@@ -2,32 +2,32 @@ import Props from './props.mdx';
 
 # Icon
 
-<div className="title">基本用法</div>
+## 基本用法
 <CodeBlock line={'5-7'}>
   <IconList />
 </CodeBlock>
 
-<div className="title">主题样式</div>
+## 主题样式
 <CodeBlock line={'5-7'}>
   <Theme />
 </CodeBlock>
 
-<div className="title">定义颜色和透明度</div>
+## 定义颜色和透明度
 <CodeBlock line={'5-7'}>
   <Color />
 </CodeBlock>
 
-<div className="title">尺寸</div>
+## 尺寸
 <CodeBlock line={'5-7'}>
   <Size />
 </CodeBlock>
 
-<div className="title">自定义样式与旋转</div>
+## 自定义样式与旋转
 <CodeBlock line={'5-7'}>
   <Style />
 </CodeBlock>
 
-<div className="title">CDN引入</div>
+## CDN引入
 <CodeBlock line={'5-7'}>
   <CDN />
 </CodeBlock>
