--- a/packages/demo/src/components/Popover/index.mdx
+++ b/packages/demo/src/components/Popover/index.mdx
@@ -2,11 +2,11 @@ import Props from './props.mdx';
 
 # Popover
 
-<div className="title">基本用法</div>
+## 基本用法
 <CodeBlock line={'5-7'}>
   <Base />
 </CodeBlock>
-<div className="title">设置触发popover的条件</div>
+## 设置触发popover的条件
 <CodeBlock line={'5-7'}>
   <Trigger />
 </CodeBlock>
