--- a/packages/demo/src/components/Transition/index.mdx
+++ b/packages/demo/src/components/Transition/index.mdx
@@ -9,3 +9,13 @@
 <CodeBlock line={'5-7'}>
   <Unmount />
 </CodeBlock>
+
+<div className="title">自定义动画</div>
+<CodeBlock line={'5-7'}>
+  <UnAnimation />
+</CodeBlock>
+
+<div className="title">使用回调函数</div>
+<CodeBlock line={'5-7'}>
+  <Callback />
+</CodeBlock>
