feat: add apiTable in components

--- a/packages/demo/src/components/Card/index.mdx
+++ b/packages/demo/src/components/Card/index.mdx
@@ -110,3 +110,5 @@ import More from "./svg/tab.tsx"
 <CodeBlock line={'5-7'}>
 <Loading/>
 </CodeBlock>
+{/* 导入的是design-props下路径的文件 */}
+<Api path="/components/card.ts" />
