--- a/packages/demo/src/components/Skeleton/index.mdx
+++ b/packages/demo/src/components/Skeleton/index.mdx
@@ -1,4 +1,4 @@
-# skeleton
+# Skeleton
 
 <div className="title">普通样式</div>
 <CodeBlock line={'5-7'}>
@@ -20,3 +20,5 @@
 <CodeBlock line={'5-7'}>
 <Skeleton style={{width:"380px",'--skeleton-active':'false'}}></Skeleton>
 </CodeBlock>
+
+<Api path="/components/skeleton.ts" />
