--- a/packages/demo/src/components/Draggable/index.mdx
+++ b/packages/demo/src/components/Draggable/index.mdx
@@ -59,3 +59,6 @@
 <CodeBlock style={{ flexWrap: 'nowrap' }}>
   <MultipleContainer />
 </CodeBlock>
+
+{/* 导入的是design-props下路径的文件 */}
+<Api path="/components/draggable.ts" />
