feat: add hash scroll

--- a/packages/demo/src/components/Button/index.mdx
+++ b/packages/demo/src/components/Button/index.mdx
@@ -20,6 +20,8 @@
   </Button>
 </CodeBlock>
 
+<h1 id="kfc">KFC</h1>
+
 <div className="title">按钮尺寸</div>
 <CodeBlock line={'5-7'}>
   <Button size="small">small</Button>
