fix: delete `` in api docs && fix mdx h2 content

--- a/packages/demo/src/components/Icon/index.mdx
+++ b/packages/demo/src/components/Icon/index.mdx
@@ -1,34 +1,43 @@
+import Props from './props.mdx';
+
 # Icon
 
-<div className="title">基本用法</div>
+## 基本用法
+
 <CodeBlock line={'5-7'}>
-  <IconList/>
+  <IconList />
 </CodeBlock>
 
-<div className="title">主题样式</div>
+## 主题样式
+
 <CodeBlock line={'5-7'}>
-  <Theme/>
+  <Theme />
 </CodeBlock>
 
-<div className="title">定义颜色和透明度</div>
+## 定义颜色和透明度
+
 <CodeBlock line={'5-7'}>
-  <Color/>
+  <Color />
 </CodeBlock>
 
-<div className="title">尺寸</div>
+## 尺寸
+
 <CodeBlock line={'5-7'}>
-  <Size/>
+  <Size />
 </CodeBlock>
 
-<div className="title">自定义样式与旋转</div>
+## 自定义样式与旋转
+
 <CodeBlock line={'5-7'}>
-  <Style/>
+  <Style />
 </CodeBlock>
 
-<div className="title">CDN引入</div>
+## CDN引入
+
 <CodeBlock line={'5-7'}>
-  <CDN/>
+  <CDN />
 </CodeBlock>
 
 {/* 导入的是design-props下路径的文件 */}
+
 <Api path="/components/draggable.ts" />
