--- a/packages/demo/src/components/Transition/index.mdx
+++ b/packages/demo/src/components/Transition/index.mdx
@@ -1,4 +1,8 @@
 # Popover
+<div className="title">css</div>
+<CodeBlock line={'5-7'}>
+  <CSSTransition />
+</CodeBlock>
 
 <div className="title">默认挂载的元素</div>
 <CodeBlock line={'5-7'}>
