--- a/packages/demo/src/components/Transition/index.mdx
+++ b/packages/demo/src/components/Transition/index.mdx
@@ -1,5 +1,5 @@
 # Popover
-<div className="title">css</div>
+<div className="title">CSSTransition使用</div>
 <CodeBlock line={'5-7'}>
   <CSSTransition />
 </CodeBlock>
