feat: switch组件支持尺寸、文本

--- a/packages/demo/src/components/Switch/index.mdx
+++ b/packages/demo/src/components/Switch/index.mdx
@@ -12,6 +12,22 @@ Switch 开关是用于切换两种互斥状态的常见控件。
   <Base />
 </CodeBlock>
 
+## 尺寸
+
+你可以通过 size 指定尺寸。目前可以指定`normal`、`large`两种尺寸类型。
+
+<CodeBlock>
+  <Size />
+</CodeBlock>
+
+## 文本展示
+
+你可以通过 `checkedText` 和 `uncheckedText` 来展示不同状态下的文本，还支持可以传入一个 Icon。
+
+<CodeBlock>
+  <Text />
+</CodeBlock>
+
 ## 受控组件
 
 你可以传入`value`、`onChange`属性来让开关变成受控组件。
