feat: [Modal]props优化

--- a/packages/demo/src/components/Modal/index.mdx
+++ b/packages/demo/src/components/Modal/index.mdx
@@ -34,12 +34,10 @@
   <Mask />
 </CodeBlock>
 
-{/* ## 使用 Hooks 获取上下文 */}
+## 声明式调用
 
-{/* 通过 useModal 创建支持读取 context 的 contextHolder */}
+你可以使用 `Modal.show(props)` 的方式来调起一个模态框。
 
-{/* 
 <CodeBlock line={'7-11'}>
   <UseModal />
-</CodeBlock> 
-*/}
+</CodeBlock>
